# leafmap

./: .dockerignore  .gitignore  .mergify.yml  .pre-commit-config.yaml  404.html  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  README.md  dem.tif.REMOVED.git-id  environment.yml  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_lite.txt  search.json  search_docs.html  setup.cfg  setup.py  sitemap.xml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  check_file_size.yml  claude-code-review.yml  codeql.yml  docker-delete-pr-tags.yml  docker-image.yml  docker-publish.yml  docs-build.yml  docs.yml  installation.yml  macos.yml  py311.yml  py313.yml  py38.yml  pypi.yml  test-windows.yml  ubuntu-uv.yml  ubuntu.yml  ubuntu_test.yml  windows.yml
.nblink/: environment.yml  nblink-lock.json
assets/: README.md  index.html
assets/archive/: index.html
basemaps/: basemaps.md  index.html
bokehmap/: bokehmap.md  index.html
changelog/: changelog.md  index.html
changelog_update/: index.html
check_maplibre/: check_maplibre.py  index.html
colormaps/: colormaps.md  index.html
common/: common.md  index.html
contributing/: contributing.md  index.html
data/: cable_geo.geojson  cog_post_event.txt  hex_config.json  index.html  states.csv  states.kml  states.kmz  world_cities.dbf  world_cities.geojson  world_cities.shp  world_cities.shx
deck/: index.html
deckgl/: index.html
docs/: CNAME  changelog.md  changelog_update.md  changelog_update.py  check_maplibre.py  contributing.md  deck copy.md  deck.md  download.md  faq.md  fire.md  get-started.md  heremap.md  index.md  installation.md  leafmap.md  legends.md  map_widgets.md  maplibregl.md  maps.md  pc.md  plot.md  plotlymap.md  search_bk.md  terrascope.md  tutorials.md  usage-bk.md  usage.ipynb  usage.md
docs/assets/: README.md
docs/data/: README.md  us_cities.geojson
docs/html/: kepler.html  kepler_cities.html  kepler_countries.html  kepler_hex.html  kepler_lines.html  kepler_states.html
docs/maplibre/: 3D_indoor_mapping.ipynb  3d_buildings.ipynb  3d_choropleth.ipynb  3d_indoor_mapping.ipynb  3d_pmtiles.ipynb  3d_terrain.ipynb  AlphaEarth.ipynb  H3.ipynb  MGRS.ipynb  README.md  _template.ipynb  add_colorbar.ipynb  add_components.ipynb  add_deckgl_layer.ipynb  add_html.ipynb  add_icon.ipynb  add_image.ipynb  add_image_generated.ipynb  add_labels.ipynb  add_legend.ipynb  add_marker.ipynb  add_text.ipynb  add_video.ipynb  animate_a_line.ipynb  animate_camera_around_point.ipynb  animate_images.ipynb  animate_point_along_line.ipynb  animate_point_along_route.ipynb  arc_layer.ipynb  attribution_position.ipynb  basemaps.ipynb  center_on_symbol.ipynb  choropleth.ipynb  (+78 more)
download/: index.html
examples/: README.md  batch_update.py  check_colab.py  examples.md  index.html  leafmap_intro.ipynb
faq/: faq.md  index.html
fire/: index.html
foliumap/: foliumap.md  index.html
get-started/: get-started.md  index.html
html/: kepler.html  kepler_cities.html  kepler_countries.html  kepler_hex.html  kepler_lines.html  kepler_states.html
installation/: index.html  installation.md
kepler/: index.html  kepler.md
leafmap/: __init__.py  __main__.py  basemaps.py  bokehmap.py  cli.py  colormaps.py  common.py  deck.py  deckgl.py  download.py  fire.py  foliumap.py  heremap.py  index.html  kepler.py  leafmap.md  leafmap.py  legends.py  map_widgets.py  mapbox.py  maplibregl.py  osm.py  pc.py  plot.py  plotlymap.py  report.py  stac.py  terrascope.py  toolbar.py
legends/: index.html
map_widgets/: index.html
maplibre/: _template.ipynb  add_3d_buildings.ipynb  add_gif.ipynb  add_image.ipynb  add_legend.ipynb  add_logo.ipynb  animate_point_along_line.ipynb  animate_point_along_route.ipynb  attribution_position.ipynb  change_building_color.ipynb  cloud_optimized_geotiff.ipynb  copernicus.ipynb  fly_to.ipynb  geojson_points.ipynb  google_earth.ipynb  google_earth_engine.ipynb  latlon_grid.ipynb  layer_manager.ipynb  line_gradient.ipynb  local_raster.ipynb  local_titiler.ipynb  locate_user.ipynb  mouse_position.ipynb  multiple_geometries.ipynb  ocean_bathymetry.ipynb  restrict_bounds.ipynb  set_terrain.ipynb  stac.ipynb  time_slider.ipynb  video_on_a_map.ipynb
maplibregl/: index.html
maps/: index.html
notebooks/: 03_cog_stac.ipynb  04_cog_mosaic.ipynb  100_nlcd.ipynb  101_nasa_opera.ipynb  108_add_geotiff.ipynb  10_add_vector.ipynb  114_nasa_fire.ipynb  115_terrascope.ipynb  16_heremap.ipynb  23_colormaps.ipynb  26_kepler_gl.ipynb  32_local_tile.ipynb  40_plotly_gui.ipynb  41_raster_gui.ipynb  43_search_control.ipynb  44_attribute_table.ipynb  60_add_widget.ipynb  67_maxar_open_data.ipynb  68_openaerialmap.ipynb  69_turkey_earthquake.ipynb  73_custom_stac.ipynb  76_image_comparison.ipynb  82_pmtiles.ipynb  92_maplibre.ipynb
osm/: index.html  osm.md
paper/: paper.bib  paper.md
pc/: index.html
plot/: index.html
plotlymap/: index.html
scripts/: convert_notebooks.py
search/: search_index.json
search_bk/: index.html
stac/: index.html  stac.md
terrascope/: index.html
tests/: __init__.py  test_colormaps.py  test_common.py  test_foliumap.py  test_leafmap.py  test_osm.py  test_toolbar.py
toolbar/: index.html  toolbar.md
tutorials/: index.html  tutorials.md
usage/: index.html
workshops/: CVPR_2025.ipynb  EarthCube_2023.ipynb  FOSS4G_2021.ipynb  HGAC_2024.ipynb  SIGSPATIAL_2021.ipynb  Taiwan_2024.ipynb
(+671 files in other folders)
